# KStore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: kstorebackend.cpp  kstorebackend.h  main.cpp
src/ui/: main.qml
tests/: test_backend.cpp  test_functional.cpp
